sezione numbers fatta

--- a/src/style/variabili.scss
+++ b/src/style/variabili.scss
@@ -1,4 +1,5 @@
 $silver-sand: #bcbdbd;
 $dark-blu: #1E2D36;
 $blue-lagoon: #048383;
-$tradewind: hsla(183, 32%, 53%, 0.35)
+$tradewind: hsla(183, 32%, 53%, 0.35);
+$fountain-blue: #52babb
