fatto array per la sezione servizi

--- a/src/style/variabili.scss
+++ b/src/style/variabili.scss
@@ -2,4 +2,6 @@ $silver-sand: #bcbdbd;
 $dark-blu: #1E2D36;
 $blue-lagoon: #048383;
 $tradewind: hsla(183, 32%, 53%, 0.35);
-$fountain-blue: #52babb
+$fountain-blue: #52babb;
+$woodsmoke: #111117;
+$surfiegreen: #097f8152
