sezione servizi finita

--- a/src/style/variabili.scss
+++ b/src/style/variabili.scss
@@ -4,4 +4,5 @@ $blue-lagoon: #048383;
 $tradewind: hsla(183, 32%, 53%, 0.35);
 $fountain-blue: #52babb;
 $woodsmoke: #111117;
-$surfiegreen: #097f8152
+$surfiegreen: hsla(181, 87%, 27%, 0.322);
+$abbey-01: hsla(225, 3%, 31%, 0.173) ;
