--- a/src/style/variabili.scss
+++ b/src/style/variabili.scss
@@ -6,3 +6,5 @@ $fountain-blue: #52babb;
 $woodsmoke: #111117;
 $surfiegreen: hsla(181, 87%, 27%, 0.322);
 $abbey-01: hsla(225, 3%, 31%, 0.173) ;
+$shark: #1d2528b4;
+$gray-nurse: #e7eee9
